# Djackets

./: .env  Dockerfile  README.md  outcontextfile.py  pyproject.toml
backend/: LICENSE  README.md  __init__.py  alembic.ini  pyproject.toml
backend/app/: __init__.py  database.py  databasepy.rmd  main.py  schemas.py
backend/app/core/: config.py
backend/migrations/: env.py
backend/migrations/versions/: 0bbb0bff4f4a_add_users_table.py  a479e8d1a8b1_update_users_table.py
backend/tests/: conftest.py  test_users.py
backend/users/: __init__.py  authentication.py  crud.py  models.py  schemas.py  token.py
backend/users/api/: controller.py
