[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sillians <ihuomacbasil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
gino = {extras = ["pg", "starlette"], version = "^1.0.1"}
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
alembic = "^1.9.0"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
